Archive2/84/7c4fc4a3b12b1e/output
main.cpp:39:29: error: no member named 'GetValue' in 'A'
    std::cout << ' ' << it->GetValue();
                        ~~  ^
1 error generated.
